# containerlab-sandbox

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
automation_lab/: cli.py  tasks.py  utils.py
inventory/: defaults.yaml  evpn_hosts.yaml  source_of_truth.yaml
templates/: base.j2
topologies/basic/: .topology.clab.yml.bak  topology.clab.drawio  topology.clab.yml
topologies/basic/clab-ceos/: ansible-inventory.yml  authorized_keys  topology-data.json
topologies/basic/clab-ceos/.tls/ca/: ca.key  ca.pem
topologies/basic/clab-ceos/ceos1/flash/: startup-config  system_mac_address
topologies/basic/clab-ceos/ceos1/flash/debug/: reload_history
topologies/basic/clab-ceos/ceos1/flash/persist/: local  secure  sys
topologies/basic/clab-ceos/ceos2/flash/: startup-config  system_mac_address
topologies/basic/clab-ceos/ceos2/flash/debug/: reload_history
topologies/basic/clab-ceos/ceos2/flash/persist/: local  secure  sys
topologies/evpn/: .topology.clab.yml.bak  topology.clab.drawio  topology.clab.yml
topologies/evpn/clab-evpn-l2-multivendor/: ansible-inventory.yml  authorized_keys  topology-data.json
topologies/evpn/clab-evpn-l2-multivendor/.tls/ca/: ca.key  ca.pem
topologies/evpn/clab-evpn-l2-multivendor/leaf1/flash/: startup-config  system_mac_address
topologies/evpn/clab-evpn-l2-multivendor/leaf1/flash/debug/: reload_history
topologies/evpn/clab-evpn-l2-multivendor/leaf2/flash/: startup-config  system_mac_address
topologies/evpn/clab-evpn-l2-multivendor/spine1/flash/: startup-config  system_mac_address
(+11 files in other folders)
