[project]
name = "automation-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "dan",email = "dan@lindow.io"}
]
readme = "README.md"
requires-python = "3.11.11"
dependencies = [
    "typer (>=0.15.1,<0.16.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "nornir-napalm (>=0.5.0,<0.6.0)",
    "nornir-utils (>=0.2.0,<0.3.0)"
]

[tool.poetry.scripts]
automation-lab = "automation_lab.cli:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
